Logo transition mobile-only fix attempt #1

--- a/css/global.css
+++ b/css/global.css
@@ -89,19 +89,34 @@ header {
   background-position: 0 0;
   height: 12em;
   transition: all 0.5s ease-in-out;
-  will-change: transform;
 }
 
 .logo {
   width: 100%;
   height: 100%;
-  will-change: transform;
 }
 
 .landing header {
   background-position: 0 -50em;
   height: 65vh;
   padding-top: 5%;
+}
+
+.landing-mobile-header {
+  display: none;
+  position: fixed;
+  width: 100%;
+  padding: 5% 1em 0;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  height: 65vh;
+  transition: opacity 0.5s ease-in-out;
+  opacity: 0;
+}
+
+.landing .landing-mobile-header {
+  opacity: 1;
 }
 
 .intro {
@@ -368,5 +383,20 @@ button:not(.text-button):hover {
   }
   section .hero {
     width: 90%;
+  }
+}
+
+@media only screen and (orientation: portrait) {
+  header:not(.landing-mobile-header) {
+    padding: 1em 1em 0;
+    background-position: 0 0;
+    height: 12em;
+    transition: opacity 0.5s ease-in-out;
+  }
+  .landing header {
+    opacity: 0;
+  }
+  .landing-mobile-header {
+    display: block;
   }
 }
